 * Simplified connection setup to custom server
   (http://www.powerfolder.com/wiki/Server_client_deployment).
 * Does not longer initially load nodes file from PowerFolder website
   for Internet use.
 * Added support for direct UDT high speed connections.
 * Added low level network tuning options
   (http://www.powerfolder.com/wiki/Low_level_network_settings).
 * Several minor improvements. 

Bugfixes:
 * Fixes auto start problem, that caused PowerFolder to start twice.
 * Fixed bug that caused invitation files failed to get opened.
 * Several minor bugfixes. 


Please give us feedback and request improvements at our forum:
http://forums.powerfolder.com

Minimum Java version is 6.0.

Thanks to those who requested features in our forum and we hope to implement
even more if you keep requesting them for the next version.

- The PowerFolder Team

Official Roadmap:
http://www.powerfolder.com/roadmap.html

Please remember: You agree to keep us free of any (legal) issues involved with
downloading and using this PowerFolder!

Contact information:
Homepage   : http://www.powerfolder.com
Contact    : http://www.powerfolder.com/contact.html
Support    : http://www.powerfolder.com/support.html
Development: http://www.powerfolder.com/about_us.html
Email	   : contact (at) powerfolder.com

External libraries used:
- JGoodies looks, forms & binding (http://www.jgoodies.com). Under BSD License. (jar/jgoodies-LICENSE.txt)
- jakarta-commons (http://jakarta.apache.org/commons).
  Under Apache License, Version 2.0


History:
 
Version 3.1.6
-------------

New features and improvements:
 * Auto-cleanup of downloads is now turned on by default.
 * Speed improvements of file up- and downloads.
 * Activation wizard now clearly indicates that account creation is mandatory.
 * Added start menu link to Wiki documentation.
 * Invitation can now also be sent to own email address only.
 * User interface is now more responsive during many file transfers.